# sacoma-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: algorithm.md  protocol.md
sacoma/: __init__.py  calculations.py  encoder.py  models.py  protocol.py  session.py  wla25.py
scripts/: ble_test.py
tests/: test_calculations.py  test_encoder.py  test_protocol.py  test_protocol_decode.py  test_session.py  vectors.py
